--- a/styles.css
+++ b/styles.css
@@ -77,6 +77,7 @@ button:hover {
     top: 50%;
     left: 25%;
     transform: translate(-50%,-50%);
+    z-index: 1;
 }
 
 .title h1:hover {
@@ -107,4 +108,17 @@ button:hover {
     font-size: 64px;
     color: #41EAD4;
     text-decoration: none;
+}
+
+
+.BackgroundImage {
+    align-content: center;
+    position: absolute;
+    top: 50%;
+    left: 75%;
+    transform: translate(-50%,-50%);
+    width: 650px;
+    height: 700px;
+    z-index: -1;
+    object-fit: cover;
 }
