--- a/styles.css
+++ b/styles.css
@@ -78,6 +78,7 @@ button:hover {
     left: 25%;
     transform: translate(-50%,-50%);
     z-index: 1;
+    background-color: none;
 }
 
 .title h1:hover {
@@ -93,16 +94,16 @@ button:hover {
 }
 
 .WWD {
-    display: flex;
-    justify-content: flex-start;
     align-items: center;
     position: absolute;
     top: 100%;
     left: 50%;
     transform: translate(-50%,-50%);
+    width: 100%;
+    padding: 10%;
 }
 
-.WWD h4{
+.WWDTitle {
     font-family: 'kanit', sans-serif;
     font-weight: 400;
     font-size: 64px;
@@ -117,8 +118,16 @@ button:hover {
     top: 50%;
     left: 75%;
     transform: translate(-50%,-50%);
-    width: 650px;
-    height: 700px;
     z-index: -1;
     object-fit: cover;
+}
+
+
+
+.WWDText {
+    font-family: 'kanit', sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    color: #FDFFFC;
+    text-decoration: none;
 }
